# textcorrect

./: README.md  io.github.dida_code.textcorrect.json  meson.build
data/: io.github.dida_code.textcorrect.desktop.in  meson.build
po/: POTFILES
src/: meson.build  textcorrect.gresource.xml  textcorrect.in  window.py  window.ui
textcorrect/: README.md  io.github.dida_code.textcorrect.json
textcorrect/data/: io.github.dida_code.textcorrect.gschema.xml  io.github.dida_code.textcorrect.metainfo.xml.in
textcorrect/data/icons/: meson.build
textcorrect/po/: meson.build
textcorrect/src/: main.py  style.css
